Text box section, also added start of footer

--- a/index.html
+++ b/index.html
@@ -6,8 +6,55 @@
     <title>Assignment 1</title>
     <link href="css/stylesheet.css" rel="stylesheet">
 </head>
+<body>
 <header>
-<div class="top">
-    <h1>Take Better Notes</h1>
-</div>
+    <div class="top">
+        <h1>Take Better Notes</h1>
+    </div>
 </header>
+<section>
+    <div class="flex-container">
+        <div class="flex-item">
+            <h2>My Notes</h2>
+            <ul>
+                <li>note one</li>
+                <li>note two</li>
+            </ul>
+        </div>
+        <div class="flex-item1">
+            <form>
+                <input type="text" id="txtbox">
+                <button class="a">New Note</button>
+                <button class="b">Dark Theme</button>
+                <button class="c">Save</button>
+                <button class="d">Cancel</button>
+
+            </form>
+
+        </div>
+
+
+
+    </div>
+
+
+</section>
+<footer>
+    <div class="bot">
+        <h2>Keep in Touch</h2>
+
+
+
+
+
+
+
+    </div>
+
+
+
+
+
+
+
+</footer>
