--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <footer>
     <div class="bot">
         <h2>Keep in Touch</h2>
+        <a href="http://www.google.com"><img src="images/linkedin_circle_color-512.webp" width="100" height="100"></a>
+        <a href="http://www.google.com"><img src="images/Internet_Line-02-512.webp" width="100" height="100"></a>
 
 
 
